

syntax = "proto2";

package Protocal.Transport;


enum MessageMajorType
{
	Unknow = 0;
	Request = 1;
	Respond = 2;
}

enum MessageMinorType
{
	Undefined = 0;
	LoginAuth = 1;
	Moving = 2;
	PlayerAppeared = 3;
	PlayerDisappeared = 4;
	Rotated = 5;
	Logout = 6;
}

message DataPackage
{
	required MessageMajorType majorType = 1;
	required MessageMinorType minorType = 2;
	optional bytes data = 3;
}
